@@ -21,6 +21,7 @@ import com.vaadin.flow.data.provider.ListDataProvider;
 import com.vaadin.flow.router.Route;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Тут страшно, но мы справимся
@@ -37,7 +38,7 @@ public class ExampleView extends VerticalLayout {
         this.exampleClient = exampleClient;
         int page = 0;
         int size = 100;
-        this.dataSource = exampleClient.getPage(page, size).getBody().toList();
+        this.dataSource = exampleClient.getPage(page, size).getBody().stream().collect(Collectors.toList());
         ValidationMessage idValidationMessage = new ValidationMessage();
         ValidationMessage exampleTextValidationMessage = new ValidationMessage();
 
@@ -96,7 +97,11 @@ public class ExampleView extends VerticalLayout {
             deleteButton.addClickListener(e -> {
                 if (editor.isOpen())
                     editor.cancel();
-                exampleClient.delete(example.getId());
+                if (grid.getDataProvider().isInMemory() && grid.getDataProvider().getClass() == ListDataProvider.class) {
+                    ListDataProvider<ExampleDto> dataProvider = (ListDataProvider<ExampleDto>) grid.getDataProvider();
+                    exampleClient.delete(example.getId());
+                    dataProvider.getItems().remove(example);
+                }
                 grid.getDataProvider().refreshAll();
             });
             return deleteButton;
@@ -181,6 +186,7 @@ public class ExampleView extends VerticalLayout {
             ExampleDto exampleDto = new ExampleDto();
             exampleDto.setExampleText(exampleTextField.getValue());
             ExampleDto savedExample = exampleClient.create(exampleDto).getBody();
+            System.out.println(savedExample);
             dataSource.add(savedExample);
             exampleTextField.clear();
             grid.getDataProvider().refreshAll();
